feat: implement JWT-based authentication system with HttpOnly cookie support and API Gateway security configuration